--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express-async-handler": "^1.2.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.0.1",
+    "firebase": "^12.2.1",
+    "firebase-admin": "^13.5.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "ip": "^2.0.1",
