--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-rate-limit": "^8.0.1",
     "firebase": "^12.2.1",
     "firebase-admin": "^13.5.0",
+    "googleapis": "^160.0.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "ip": "^2.0.1",
@@ -34,6 +35,8 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^4.2.1",
+    "node-fetch": "^3.3.2",
     "pdfkit": "^0.17.2",
     "razorpay": "^2.9.6",
     "sharp": "^0.34.3",
