--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.4.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "bwip-js": "^4.7.0",
@@ -24,7 +25,7 @@
     "express-rate-limit": "^8.0.1",
     "firebase": "^12.2.1",
     "firebase-admin": "^13.5.0",
-    "googleapis": "^160.0.0",
+    "haversine": "^1.1.1",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "ip": "^2.0.1",
@@ -38,6 +39,7 @@
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "pdfkit": "^0.17.2",
+    "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "sharp": "^0.34.3",
     "swagger-jsdoc": "^6.2.8",
